<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/txtForgotPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_18sp"
            android:fontFamily="@font/gill_sans_mt"
            android:text="@string/forgot_password"
            android:gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/imgForgotPasswordLogo"
            android:layout_width="wrap_content"
            android:src="@drawable/icon_forgot"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_below="@+id/txtForgotPasswordTitle"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtForgotMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25dp"
            android:textSize="@dimen/_15sp"
            android:padding="@dimen/_5dp"
            android:layout_below="@+id/imgForgotPasswordLogo"
            android:fontFamily="@font/gill_sans_mt"
            android:textColor="@color/black"
            android:text="@string/enter_your_registered_email_phone_no"
            android:gravity="center_horizontal"
            />

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginLeft="@dimen/_50dp"
            android:layout_marginRight="@dimen/_50dp"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center_vertical"
            android:layout_below="@+id/txtForgotMsg"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45dp"
                android:paddingLeft="@dimen/_5dp"
                android:paddingRight="@dimen/_5dp"
                android:textColorHint="@color/app_color"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/_2dp"
                    android:paddingTop="@dimen/_2dp"
                    android:singleLine="true"
                    android:textColor="@color/app_color"
                    android:textColorHint="@color/app_color"
                    android:textSize="@dimen/_15sp" />


            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.3dp"
                android:background="@drawable/bg_statusbar" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_below="@+id/llEmail"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginRight="@dimen/_40dp"
            android:layout_marginTop="@dimen/_40dp"
            android:background="@drawable/bg_statusbar"
            android:text="SUBMIT"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            />

        <TextView
            android:id="@+id/txtForgotDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:textSize="@dimen/_12sp"
            android:layout_below="@+id/btnSubmit"
            android:fontFamily="@font/gill_sans_mt"
            android:textColor="@color/dark_gray"
            android:text="A password reset link will be sent to"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/txtForgotDescOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sp"
            android:layout_below="@+id/txtForgotDesc"
            android:fontFamily="@font/gill_sans_mt"
            android:textColor="@color/dark_gray"
            android:text="registered email address/phone number"
            android:gravity="center_horizontal"
            />

        <RelativeLayout
            android:id="@+id/rlLoader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:background="@color/half_transparent"
            android:visibility="invisible">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loader"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"

                android:layout_centerInParent="true"
                android:padding="@dimen/_5dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading.json"
                app:lottie_loop="true" />
        </RelativeLayout>



    </RelativeLayout>

</layout>