<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/_5dp"
        android:layout_marginLeft="@dimen/_10dp"
        android:layout_marginRight="@dimen/_10dp"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginBottom="@dimen/_5dp"
        app:cardCornerRadius="@dimen/_5dp">

        <RelativeLayout
            android:id="@+id/view_foreground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/_10dp">

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:src="@drawable/shape_1"
                android:padding="@dimen/_5dp"
                android:layout_alignParentRight="true"
                />

            <ImageView
                android:id="@+id/imgCart"
                android:layout_width="@dimen/_100dp"
                android:layout_height="@dimen/_100dp"
                android:layout_marginRight="@dimen/_10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder" />

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_30dp"
                android:layout_toEndOf="@id/imgCart"
                android:ellipsize="end"
                android:fontFamily="@font/gill_sans_mt"
                android:text="Apple Macbook Air i5 5th Gen-(8 GB/128 GB SSD/Mac OS Sierra)"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProductName"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toEndOf="@+id/imgCart"
                android:fontFamily="@font/gill_sans_mt"
                android:maxLines="1"
                android:text="@string/price"
                android:textColor="@color/gray_color"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/txtProductPriceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProductName"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toEndOf="@+id/txtProductPrice"
                android:fontFamily="@font/gill_sans_mt"
                android:maxLines="1"
                android:text="$129"
                android:textColor="@color/app_color_two"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/txtProductSeller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProductPrice"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toEndOf="@+id/imgCart"
                android:fontFamily="@font/gill_sans_mt"
                android:maxLines="1"
                android:text="@string/seller"
                android:textColor="@color/gray_color"
                android:textSize="@dimen/_15sp" />

            <TextView
                android:id="@+id/txtProductSellerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProductPriceValue"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toEndOf="@+id/txtProductSeller"
                android:fontFamily="@font/gill_sans_mt"
                android:maxLines="1"
                android:text="Done J"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sp" />

            <LinearLayout
                android:id="@+id/llQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProductSeller"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toEndOf="@+id/imgCart"
                android:background="@drawable/bg_popular_search"
                android:orientation="horizontal"
                android:padding="@dimen/_2dp">

                <TextView
                    android:id="@+id/txtProductQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gill_sans_mt"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_2dp"
                    android:text="@string/qty"
                    android:textColor="@color/gray_color" />

                <TextView
                    android:id="@+id/txtProductQuantityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:drawablePadding="@dimen/_5dp"
                    android:drawableRight="@drawable/dropdown_btn"
                    android:fontFamily="@font/gill_sans_mt"
                    android:maxLines="1"
                    android:text="2"
                    android:textColor="@color/app_color_two"
                    android:textSize="@dimen/_15sp" />


            </LinearLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>